--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <nav class="nav">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -28,21 +28,21 @@
     </div>
     <main>
         <section class="content">
-            <article class="search-engine-optimization">
+            <article class="content__article">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO optimization notes book with coffee cups, pencils, and a laptop"/>
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </article>
-            <article id="online-reputation-management" class="online-reputation-management">
+            <article class="content__article">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop displaying a reputation graph" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </article>
-            <article id="social-media-marketing" class="social-media-marketing">
+            <article class="content__article">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="People discussing various technologies represented by mini icons" />
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -51,21 +51,21 @@
             </article>
         </section>
         <aside class="benefits">
-            <article class="benefit-lead">
+            <article class="benefit__article">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="Lead generation icon with funnel and dollar sign" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </article>
-            <article class="benefit-brand">
+            <article class="benefit__article">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="Brand awatness icon with light bulb" />
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </article>
-            <article class="benefit-cost">
+            <article class="benefit__article">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="Cost management icon with dollar signs and settings gear" />
                 <p>
