--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
     <main>
         <section class="content">
             <article class="content__article">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO optimization notes book with coffee cups, pencils, and a laptop"/>
+                <img id="search-engine-optimization" src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO optimization notes book with coffee cups, pencils, and a laptop"/>
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </article>
             <article class="content__article">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop displaying a reputation graph" />
+                <img id="online-reputation-management" src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop displaying a reputation graph" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </article>
             <article class="content__article">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="People discussing various technologies represented by mini icons" />
+                <img id="social-media-marketing" src="./assets/images/social-media-marketing.jpg" class="float-left" alt="People discussing various technologies represented by mini icons" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
