--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav class="nav">
-            <ul>
+            <ul role="navigation" aria-label="Main Menu">
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
