Added comment to the HTML navigation tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav class="nav">
-            <ul role="navigation" aria-label="Main Menu">
+            <ul role="navigation" aria-label="Main Menu"><!-- 'role' attribute to indicate that 'nav' tag is navigation and 'aria-label' for screen readers. -->
+
+                
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
